kibana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana
spec:
  rules:
    - host: kibana.reshout.com
      http:
        paths:
          - backend:
              service:
                name: kibana
                port:
                  number: 5601
            path: /
            pathType: Prefix
